# CellSePi

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  nfpm.yaml  objects.inv  pyproject-flet.toml  pyproject.toml  sitemap.xml
.github/workflows/: build_action.yml  docs.yml
cellsepi/: config.json  csp.schema.json  main.py  pyproject.toml
cellsepi/backend/: _version.py  avg_diameter.py  cellsepi.py  config_file.py  constants.py  data_util.py  error_manager.py  evaluation_logic.py  fluorescence.py  image_util.py  image_utils.py  images.py  model_types.py  segmentation.py  settings.py  settings_file.py  training.py  worker.py  worker_util.py
cellsepi/backend/CellposeV3/: coreV3.py  dynamicsV3.py  ioV3.py  metricsV3.py  modelsV3.py  plotV3.py  resnet_torchV3.py  segformerV3.py  trainV3.py  transformsV3.py  utilsV3.py  versionV3.py
cellsepi/backend/expert_mode/: event_manager.py  limits.py  listener.py  module.py  pipe.py  pipeline_manager.py  ports.py
cellsepi/backend/expert_mode/modules/: image_and_mask_export.py  image_readout.py  image_segmentation.py  project_3d_to_2d.py  read_dir.py  read_files.py  read_lif.py  read_tif.py  review.py  spot_detection.py
cellsepi/backend/expert_mode/modules/big_fish/: big_fish.py
cellsepi/frontend/: dialogs.py  gui.py  gui_canvas.py  gui_colors.py  gui_config.py  gui_directory.py  gui_fluorescence.py  gui_image_tuning.py  gui_mask.py  gui_options.py  gui_page_overlay.py  gui_segmentation.py  gui_settings.py  gui_training_environment.py
cellsepi/frontend/expert_mode/: expert_constants.py  gui_builder.py  gui_expert_environment.py  gui_lines.py  gui_module.py  gui_pipeline.py  gui_pipeline_listener.py  pipeline_storage.py
cellsepi/playground/: create_icon_windows.py  create_test_images.py  create_tif_test_images.py  file_type_support.py
docs/: index.md
docs/examples/: MyModule.py  my_module_steps.py
docs/guide/: examples.md  plugin.md  ports.md  quickstart.md  run.md  settings.md  subclass.md
docs/stylesheets/: extra.css
examples/: my_module.py
guide/examples/: index.html
guide/plugin/: index.html
guide/ports/: index.html
guide/quickstart/: index.html
guide/run/: index.html
guide/settings/: index.html
guide/subclass/: index.html
javascripts/: static-card.js
playground/: custom_controls.py  file_type_support.ipynb
search/: search_index.json
src/: pyproject.toml
src/cellsepi/: __main__.py  config.json  main.py  pyproject.toml
src/cellsepi/backend/main_window/: cellsepi.py  config_file.py  constants.py  data_util.py  image_tuning.py  images.py  segmentation.py
src/cellsepi/backend/main_window/expert_mode/: pipeline_manager.py
src/cellsepi/backend/main_window/expert_mode/modules/: big_fish.py  review.py  spot_detection.py
src/cellsepi/frontend/main_window/: gui.py  gui_canvas.py  gui_colors.py  gui_config.py  gui_directory.py  gui_fluorescence.py  gui_image_tuning.py  gui_mask.py  gui_options.py  gui_page_overlay.py  gui_segmentation.py  gui_training_environment.py
src/cellsepi/frontend/main_window/expert_mode/: expert_constants.py  gui_builder.py  gui_expert_environment.py  gui_lines.py  gui_module.py  gui_pipeline.py  gui_pipeline_listener.py  pipeline_storage.py
src/cellsepi/playground/: f1.json  f2.json  file_type_support.ipynb  file_type_support.py  test.txt
test/: test_config.py  test_drawing_util.py
test/test_expert_mode/: dummy_modules.py  test_event_manager.py  test_module_and_pipe.py  test_pipeline.py
test/test_normal_mode/: test_config.py  test_error_manager.py  test_settings.py
test/test_pipeline/: dummy_modules.py  test_event_manager.py  test_module_and_pipe.py  test_pipeline.py
