[tool.flet.app]
path = "cellsepi"

[tool.poetry]
name = "cellsepi"
version = "2.0"
description = "Segmentation of microscopy images and data analysis pipeline with a graphical user interface, powered by Cellpose."
authors = ["Jenna Ahlvers", "Santosh Chhetri Thapa", "Nike Dratt", "Pascal Heß", "Florian Hock"]
license = "Apache-2.0"
homepage = "https://github.com/CellSePi/CellSePi"
readme = "README.md"
packages = [
    { include = "cellsepi"}
]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "2.1.0"
numba = "0.65.1"
scipy = "1.17.1"
pillow = "12.2.0"
pandas = "2.2.3"
openpyxl = "3.1.5"
opencv-python = "4.13.0.92"
cellpose = "4.1.1"
flet = "0.84.0"
flet-cli = "0.84.0"
flet-desktop = "0.84.0"
flet-color-pickers = "0.84.0"
flet-extended-interactive-viewer = "0.2.1"
bioio = "3.3.0"
bioio-lif = "1.4.2"
jsonschema = "4.25.1"
cellsepi-drawing = { git = "https://github.com/CellSePi/CellSePiDrawing.git", branch = "master" }

torch = [
    { version = "2.6.0", source = "pytorch", markers = "sys_platform != 'darwin'" },
    { version = "2.6.0", markers = "sys_platform == 'darwin'" }
]

torchvision = [
    { version = "0.26.0", source = "pytorch", markers = "sys_platform != 'darwin'" },
    { version = "0.26.0", markers = "sys_platform == 'darwin'" }
]

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"

[tool.poetry.scripts]
cellsepi = "cellsepi.main:main"

[[tool.poetry.include]]
path = "cellsepi/models/**/*"
[[tool.poetry.include]]
path = "cellsepi/csp.schema.json"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"