[tool.flet.app]
path = "cellsepi"
hide_window_on_start = true

[tool.flet]
product_name = "CellSePi"
artifact = "cellsepi"
org = "org.cellsepi"
company = "CellSePi"
copyright = "Copyright © 2026 CellSePi"
description = "Segmentation of microscopy images and data analysis pipeline with a graphical user interface, powered by Cellpose."

[tool.poetry]
name = "cellsepi"
version = "2.0.0"
description = "Segmentation of microscopy images and data analysis pipeline with a graphical user interface, powered by Cellpose."
authors = ["Jenna Ahlvers", "Santosh Chhetri Thapa", "Nike Dratt", "Pascal Heß", "Florian Hock", "Erik Kubaczka"]
license = "Apache-2.0"
homepage = "https://github.com/CellSePi/CellSePi"
readme = "README.md"
packages = [
    { include = "cellsepi"}
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "2.1.0"
numba = "0.65.1"
scipy = "1.17.1"
pandas = "2.2.3"
openpyxl = "3.1.5"
opencv-python = "4.13.0.92"
cellpose = "4.1.1"
flet = "0.85.3"
flet-cli = "0.85.3"
flet-desktop = "0.85.3"
flet-color-pickers = "0.85.3"
flet-extended-interactive-viewer = "0.2.1"
bioio = "3.3.0"
bioio-lif = "1.4.2"
bioio-nd2 = "1.7.0"
bioio-czi = "2.7.1"
bioio-tifffile = "1.3.0"
bioio-ome-tiff = "1.4.0"
reportlab = "4.5.1"
jsonschema = "4.25.1"
cellsepi-drawing = { git = "https://github.com/CellSePi/CellSePiDrawing.git", branch = "master" }
torch = "2.6.0"
torchvision = "0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"

[tool.poetry.scripts]
cellsepi = "cellsepi.main:main"

[[tool.poetry.include]]
path = "cellsepi/csp.schema.json"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.flet.flutter.pubspec.dependency_overrides]
flet = "0.85.3"
