[tool.flet.app]
path = "cellsepi"
hide_window_on_start = true

[tool.flet]
product_name = "CellSePi"
artifact = "cellsepi"
org = "org.cellsepi"
company = "CellSePi"
copyright = "Copyright © 2026 CellSePi"
description = "A modular platform for end-to-end batch cell segmentation and quantification for microscopy images."

[project]
name = "cellsepi"
version = "1.0.0" # Automatically overridden by Git tag (format: v<major>.<minor>.<patch>[suffix], e.g. v1.0.1 or v1.0.1-beta)
description = "A modular platform for end-to-end batch cell segmentation and quantification for microscopy images."
authors = [
    { name = "Jenna Ahlvers" },
    { name = "Santosh Chhetri Thapa" },
    { name = "Nike Dratt" },
    { name = "Pascal Heß" },
    { name = "Florian Hock" },
    { name = "Erik Kubaczka" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy==2.1.0",
    "numba==0.65.1",
    "scipy==1.17.1",
    "pandas==2.2.3",
    "openpyxl==3.1.5",
    "opencv-python==4.13.0.92",
    "cellpose==4.2.1.1",
    "flet==0.85.3",
    "flet-cli==0.85.3",
    "flet-desktop==0.85.3",
    "flet-color-pickers==0.85.3",
    "flet-extended-interactive-viewer==0.2.1",
    "bioio==3.3.0",
    "bioio-lif==1.4.2",
    "bioio-nd2==1.7.0",
    "bioio-czi==2.7.1",
    "bioio-tifffile==1.3.0",
    "bioio-ome-tiff==1.4.0",
    "reportlab==5.0.0",
    "jsonschema==4.25.1",
    "cellsepi-drawing @ git+https://github.com/CellSePi/CellSePiDrawing.git@master",
    "dinov3 @ git+https://github.com/facebookresearch/dinov3",
    "torch==2.6.0",
    "torchvision==0.21.0",
]

[dependency-groups]
dev = [
    "pytest==9.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["cellsepi"]

[project.scripts]
cellsepi = "cellsepi.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cellsepi"]
include = ["cellsepi/csp.schema.json"]

[tool.hatch.metadata]
allow-direct-references = true

